00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hetero-demo
  labels:
    app.kubernetes.io/part-of: hetero-hcp-demo
